# quant-orchestrator

./: .gitignore  AGENTS.md  README.md  environment.yml  main.py  pyproject.toml
docs/: orchestrator-vision.md
notebooks/: README.md  aapl_option_picker_ml.ipynb  aapl_options_multi_model_backtest.ipynb  backtest_framework_comparsion.ipynb  cross_framework_sma_search_monte_carlo.ipynb  mag7_options_multi_model_backtest.ipynb  mag7_sma_crossover_comparison.ipynb  mag7_sma_crossover_monte_carlo.ipynb  multi_vendor_backtesting_py_sma_crossover.ipynb  tutorial_backtesting_py.ipynb  tutorial_nautilus.ipynb  tutorial_zipline.ipynb  wfo_mag7_sma_optimization.ipynb  wfo_multi_vendor_framework_forward_test.ipynb  workflow_backtest_only.ipynb  workflow_backtest_only.py  workflow_chain_example.ipynb  workflow_chain_example.py  workflow_train_only.ipynb  workflow_train_only.py
notebooks/ml_trading/: gpu_rf_shared_book_ml_trading.ipynb  ml_filtered_sma_trading.ipynb
notebooks/mult-ml-frameworks/: feature_family_text_backend_benchmark.ipynb  flair_event_context_feature_family_mtl.ipynb  flair_feature_family_identity_mtl.ipynb  flair_feature_family_target_mtl.ipynb  gpu_random_forest_collapsed_feature_family_mtl.ipynb  sample_model_training.ipynb
notebooks/multi_backtest_frameworks/: sample_strategy_comparsion.ipynb  sample_strategy_validation.ipynb
quant_orchestrator/: __init__.py  artifacts.py  cli.py  dagster_defs.py  data.py  experiments.py  monte_carlo.py  optimization.py  options_backtesting.py  options_research.py  pipeline.py  runtime.py  strategy.py  tracking.py  trading_app_equity.py  trading_app_experiments.py
quant_orchestrator/backtest_engines/: __init__.py
quant_orchestrator/backtest_engines/nautilus/: __init__.py  provider.py
quant_orchestrator/backtest_engines/optopsy/: __init__.py  provider.py
quant_orchestrator/backtest_engines/pandas/: __init__.py  provider.py
quant_orchestrator/backtest_engines/zipline/: __init__.py  provider.py
quant_orchestrator/backtests/: __init__.py  nautilus_sma.py  pandas_sma.py  research.py  zipline_sma.py
quant_orchestrator/brokers/: __init__.py
quant_orchestrator/brokers/alpaca/: __init__.py  provider.py
quant_orchestrator/brokers/robinhood/: __init__.py  provider.py
quant_orchestrator/experiment_trackers/: __init__.py
quant_orchestrator/experiment_trackers/mlflow/: __init__.py  provider.py
quant_orchestrator/ml_frameworks/: __init__.py
quant_orchestrator/ml_frameworks/sklearn/: __init__.py  provider.py
quant_orchestrator/ml_frameworks/torch/: __init__.py
quant_orchestrator/ml_frameworks/transformers/: __init__.py  provider.py
quant_orchestrator/platform/: __init__.py  builtins.py  contracts.py  registry.py
templates/provider_cookiecutter/: README.md  provider.py
tests/: conftest.py  test_artifacts.py  test_backtesting_reporting.py  test_flair_shared.py  test_local_imports.py  test_ml_text_adapters.py  test_optimization.py  test_pipeline.py  test_shared_book.py
