[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-orchestrator"
version = "0.1.0"
description = "Workflow and backtesting adapters around Quant Warehouse data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quant Orchestrator" }]
keywords = ["quant", "trading", "backtesting", "orchestration", "dagster"]
dependencies = [
    "dagster>=1.13,<2",
    "mlflow>=3.1,<4",
    "numpy>=1.26,<2.5",
    "pandas>=2.1,<3",
    "quant-warehouse @ git+https://github.com/quantarb/quant-warehouse.git@main",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
]
cuda = [
    "torch>=2.5",
    "cupy-cuda12x>=13",
]
backtesting = [
    "backtesting>=0.3.3",
    "vectorbt>=1.0.0",
    "zipline-reloaded==3.1.1",
    "nautilus-trader==1.228.0",
]
options = [
    "optopsy>=2.3,<3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
all = [
    "backtesting>=0.3.3",
    "vectorbt>=1.0.0",
    "scikit-learn>=1.4",
    "torch>=2.5",
    "cupy-cuda12x>=13",
    "zipline-reloaded==3.1.1",
    "nautilus-trader==1.228.0",
    "optopsy>=2.3,<3",
]

[project.scripts]
quant-orchestrator = "quant_orchestrator.cli:main"

[project.entry-points."quant_orchestrator.ml_framework"]
sklearn = "quant_orchestrator.platforms.ml_frameworks.sklearn:sklearn_provider"
torch = "quant_orchestrator.platforms.ml_frameworks.torch:torch_provider"
transformers = "quant_orchestrator.platforms.ml_frameworks.transformers:transformers_provider"

[project.entry-points."quant_orchestrator.backtesting_framework"]
backtesting_py = "quant_orchestrator.platforms.backtesting_frameworks.backtesting_py:backtesting_py_provider"
pandas = "quant_orchestrator.platforms.backtesting_frameworks.pandas:pandas_provider"
zipline = "quant_orchestrator.platforms.backtesting_frameworks.zipline:zipline_provider"
nautilus = "quant_orchestrator.platforms.backtesting_frameworks.nautilus:nautilus_provider"
optopsy = "quant_orchestrator.platforms.backtesting_frameworks.optopsy:optopsy_provider"

[tool.hatch.build.targets.wheel]
packages = ["quant_orchestrator"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
